force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/ARTL_Address_Id__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Address_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>