force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/ARTL_Address_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Address_Verification_Status__c</fullName>
    <formula>IF( ARTL_Feasibility_Error_Margin__c  &lt; 26, IMAGE($Label.AddressVerificationGreenImage &amp; &quot;?&quot;, &quot;Green&quot;, 20, 12),
IF ( ARTL_Feasibility_Error_Margin__c &lt; 50, IMAGE($Label.AddressVerificationAmberImage &amp; &quot;?&quot;, &quot;Yellow&quot;, 20, 12),
IMAGE($Label.AddressVerificationRedImage &amp; &quot;?&quot;, &quot;Red&quot;, 20, 12)
))</formula>
    <label>Address Verification Status</label>
    <type>Text</type>
</CustomField>