force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/ARTL_Feasibility_Error_Margin__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Feasibility_Error_Margin__c</fullName>
    <label>Feasibility Error Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>