force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/ARTL_Feasibility_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Feasibility_Geolocation__c</fullName>
    <label>Feasibility Geolocation</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>