force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/ARTL_Pincode_Validation_Error__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Pincode_Validation_Error__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pincode Validation Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>