force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/ARTL_Pincode_Validation_Result__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Pincode_Validation_Result__c</fullName>
    <label>Pincode Validation Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>