force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/ARTL_RevisitSite__c.field-meta.xml
<CustomField>
    <fullName>ARTL_RevisitSite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revisit Site</label>
    <type>Checkbox</type>
</CustomField>