force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/BAC_Phone__c.field-meta.xml
<CustomField>
    <fullName>BAC_Phone__c</fullName>
    <label>BAC Phone</label>
    <type>Phone</type>
</CustomField>