force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/DCP_Record__c.field-meta.xml
<CustomField>
    <fullName>DCP_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DCP Record</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ContactPremiseRelation__c.Role__c</field>
            <operation>equals</operation>
            <value>DCP</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ContactPremiseRelation__c</referenceTo>
    <relationshipLabel>Quote Members</relationshipLabel>
    <relationshipName>Quote_Members</relationshipName>
    <type>Lookup</type>
</CustomField>