force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/Delivery_Installation_GST__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Installation_GST__c</fullName>
    <label>Delivery Installation GST</label>
    <length>100</length>
    <type>Text</type>
</CustomField>