force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/SAC_First_Name__c.field-meta.xml
<CustomField>
    <fullName>SAC_First_Name__c</fullName>
    <label>SAC First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>