force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/SAC_Phone__c.field-meta.xml
<CustomField>
    <fullName>SAC_Phone__c</fullName>
    <label>SAC Phone</label>
    <type>Phone</type>
</CustomField>